Responsive Design Added

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
     <div class = 'overlay'>
     <nav class = 'navigator'>
+        <h1>myWeather</h1>
+
         <form class = 'searchInput'>
-            <h1>WeatherApp</h1>
             <input class = 'input' type = "text">
             <button class = "butt">SEARCH</button>  
             <label class="switch">
@@ -24,7 +25,8 @@
          </form>
         </nav>
         <div class = "intro">
-            <h1> Welcome to my weather app! Enter a location to get started!</h1>
+            <h1>Enter a location to get started.</h1>
+            <h1>Use Toggle switch to choose units (Left for metric, Right for Imperial)</h1>
         </div>
         <div class = "mainInfo">
             <div class = "details">
